@@ -35,6 +35,7 @@
   
   
   <LI>The list of all <A href="membership.html">registered members</A>
+  at the time of the first election.
   
   
   <LI><A href="electionrules.html">Election rules and procedures</A>
