@@ -99,7 +99,9 @@
  referenda.  If you are a GNOME contributor and would like to become
  a member of the Foundation, <a href="membership-form.html">apply
  here</a>.  If you aren't sure if you qualify, read the
- <a href="membership-policy.html">Membership Policy</a>.
+ <a href="membership-policy.html">Membership Policy</a>. You
+ can also browse the <a href="membership-list.html">current membership
+ list</a>.
 </p>
 
 <p>
@@ -111,9 +113,6 @@ election results and related materials</a></div>
 
 <div style="margin-bottom: 0in; "><a href="http://www.gnome.org/faqs/gnome-foundation-faq">Frequently
 Asked Questions</a></div>
-
-<div style="margin-bottom: 0in; ">The list of all <a href="/membership.html">registered
-members</a></div>
 
 <div style="margin-bottom: 0in; "><a href="/charter.html">Foundation
 Charter&nbsp;</a></div>
